# clubresolve

./: .gitignore  TODOS.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/agents/: drafts_agent.py  evidence_agent.py  graph.py  legal_agent.py  state.py  strategy_agent.py
backend/app/agents/prompts/: drafts.py  evidence.py  legal.py  strategy.py
backend/app/agents/tools/: knowledge_base.py
backend/app/api/: auth.py  cases.py  chat.py  evidence.py  evidence_requests.py  keys.py  questions.py  router.py  wizard.py
backend/app/knowledge/: ingest.py  retriever.py
backend/app/knowledge/sources/: bc_societies_act.md  common_disputes.md  escalation_paths.md  safesport_policies.md
backend/app/models/: __init__.py  case.py  draft.py  evidence.py  evidence_request.py  message.py  question.py  user.py  wizard.py
backend/app/schemas/: case.py  chat.py  evidence.py  evidence_request.py  question.py  user.py  wizard.py
backend/app/services/: action_plan.py  crypto.py  doc_parser.py  email_service.py  intake_review.py  llm_router.py  review_status.py  strategic_planner.py
backend/tests/: conftest.py  test_evidence_requests.py  test_intake_review.py  test_strategic_planner.py  test_visit.py  test_wizard.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/auth/login/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/wizard/: page.tsx
frontend/src/lib/: api.ts  types.ts
frontend/src/stores/: authStore.ts  caseStore.ts
(+10 files in other folders)
